@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2020  Luc Hermans
+ * Copyright (C) 2026  Luc Hermans
  * 
  * This program is free software: you can redistribute it and/or modify it under the terms of the
  * GNU General Public License as published by the Free Software Foundation, either version 3 of the
@@ -16,23 +16,26 @@
  */
 package org.lh.dmlj.schema.editor.common;
 
+import static java.util.Comparator.comparing;
+
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.OutputStream;
 import java.io.PrintWriter;
-import java.util.Stack;
+import java.util.ArrayDeque;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Objects;
+import java.util.function.Function;
 import java.util.function.Supplier;
+import java.util.stream.Stream;
 
 import org.eclipse.emf.common.util.URI;
-import org.eclipse.emf.ecore.resource.Resource;
-import org.eclipse.emf.ecore.resource.ResourceSet;
 import org.eclipse.emf.ecore.resource.impl.ResourceSetImpl;
 import org.eclipse.emf.ecore.xmi.impl.XMIResourceFactoryImpl;
 import org.eclipse.swt.custom.BusyIndicator;
 import org.eclipse.ui.PlatformUI;
-import org.lh.dmlj.schema.DuplicatesOption;
 import org.lh.dmlj.schema.Element;
 import org.lh.dmlj.schema.Key;
 import org.lh.dmlj.schema.KeyElement;
@@ -41,8 +44,6 @@ import org.lh.dmlj.schema.OwnerRole;
 import org.lh.dmlj.schema.Schema;
 import org.lh.dmlj.schema.SchemaArea;
 import org.lh.dmlj.schema.SchemaRecord;
-import org.lh.dmlj.schema.SetMembershipOption;
-import org.lh.dmlj.schema.SetMode;
 import org.lh.dmlj.schema.SetOrder;
 import org.lh.dmlj.schema.SortSequence;
 import org.lh.dmlj.schema.StorageMode;
@@ -52,10 +53,10 @@ import org.lh.dmlj.schema.editor.dsl.builder.syntax.RecordSyntaxBuilder;
 import org.lh.dmlj.schema.editor.dsl.builder.syntax.SchemaSyntaxBuilder;
 import org.lh.dmlj.schema.editor.log.Logger;
 
-public abstract class Tools {
+public final class Tools {
 	
-	public static boolean areaMixesWithRecord(SchemaArea area, SchemaRecord record) {
-		if (record.isCalc() || record.isDirect() || record.isVia()) {
+	public static boolean areaMixesWithRecord(SchemaArea area, SchemaRecord schemaRecord) {
+		if (schemaRecord.isCalc() || schemaRecord.isDirect() || schemaRecord.isVia()) {
 			return canHoldNonVsamRecords(area);
 		} else {
 			return canHoldVsamRecords(area);
@@ -77,39 +78,33 @@ public abstract class Tools {
 	private static boolean containsNonVsamRecord(SchemaArea area) {
 		if (area == null) {
 			throw new IllegalArgumentException("area is null");
+		} else {	
+			return area.getRecords().stream()
+					.anyMatch(r -> !r.isVsam() && !r.isVsamCalc());
 		}
-		for (SchemaRecord record : area.getRecords()) {
-			if (!record.isVsam() && !record.isVsamCalc()) {
-				return true;
-			}
-		}
-		return false;
 	}
 
 	private static boolean containsVsamRecord(SchemaArea area) {
 		if (area == null) {
 			throw new IllegalArgumentException("area is null");
+		} else {	
+			return area.getRecords().stream()
+					.anyMatch(r -> r.isVsam() || r.isVsamCalc());
 		}
-		for (SchemaRecord record : area.getRecords()) {
-			if (record.isVsam() || record.isVsamCalc()) {
-				return true;
-			}
-		}
-		return false;
 	}
 	
 	public static <T> T executeWithCursorBusy(Supplier<T> code) {
-		Stack<T> result = new Stack<>();
-		Stack<Throwable> exceptionToThrow = new Stack<>();
+		var result = new ArrayDeque<T>();
+		var exceptionToThrow = new ArrayDeque<Throwable>();
 		BusyIndicator.showWhile(PlatformUI.getWorkbench().getDisplay(), () -> {
 			try {
 				result.push(code.get());
-			} catch (Throwable t) {
-				exceptionToThrow.push(t);				
+			} catch (Exception e) {
+				exceptionToThrow.push(e);				
 			}
 		});
 		if (!exceptionToThrow.isEmpty()) {
-			Throwable t = exceptionToThrow.pop();			
+			var t = exceptionToThrow.pop();			
 			Logger.getLogger(Plugin.getDefault()).error("", t);
 			throw new IllegalStateException(t.getMessage(), t);
 		} else {
@@ -117,10 +112,10 @@ public abstract class Tools {
 		}
 	}
 
-	public static String generateRecordElementsDSL(SchemaRecord record) {
-		String dsl = new RecordSyntaxBuilder().build(record);
-		int i = dsl.indexOf("\"\"\"\n");
-		int j = dsl.lastIndexOf("\n\"\"\"");
+	public static String generateRecordElementsDSL(SchemaRecord schemaRecord) {
+		var dsl = new RecordSyntaxBuilder().build(schemaRecord);
+		var i = dsl.indexOf("\"\"\"\n");
+		var j = dsl.lastIndexOf("\n\"\"\"");
 		return dsl.substring(i + 3, j).replace("\n    ", "\n").substring(1);
 	}
 
@@ -128,9 +123,9 @@ public abstract class Tools {
 		if (calcKey == null) {
 			return "";
 		}
-		StringBuilder p = new StringBuilder();		
-		for (KeyElement keyElement :calcKey.getElements()) {
-			if (p.length() > 0) {
+		var p = new StringBuilder();		
+		for (var keyElement :calcKey.getElements()) {
+			if (!p.isEmpty()) {
 				p.append(", ");
 			}
 			p.append(keyElement.getElement().getName());
@@ -138,279 +133,206 @@ public abstract class Tools {
 		return p.toString();
 	}
 	
-	public static Element getDefaultSortKeyElement(SchemaRecord record) {
-		
-		if (record.getElements() == null) {
-			// element list not set in record (shouldn't really happen)
-			return null;
-		}
-		
-		// traverse all elements; find and return the first suitable element
-		for (Element element : record.getElements()) {
-			if (!element.getName().equalsIgnoreCase("FILLER") &&
-				element.getLength() <= 256 &&
-				!isInvolvedInRedefines(element) &&
-				!isInvolvedInOccurs(element)) {
-				
-				return element;
-			}
-		}
-		
-		// no suitable element defined; the record cannot participate in a sorted set
-		return null;
-		
-	}	
+	public static Element getDefaultSortKeyElement(SchemaRecord schemaRecord) {
+		return schemaRecord.getElements() == null ? null : schemaRecord.getElements().stream()
+				.filter(Tools::isSuitableAsSortElement)
+				.findFirst()
+				.orElse(null);
+	}
+	
+	private static boolean isSuitableAsSortElement(Element element) {
+		return !element.getName().equalsIgnoreCase("FILLER") && element.getLength() <= 256 && !isInvolvedInRedefines(element) && !isInvolvedInOccurs(element);
+	}
 
 	public static String getDuplicatesOption(Key calcKey) {
 		if (calcKey == null) {
 			return "";
-		}
-		DuplicatesOption duplicatesOption = calcKey.getDuplicatesOption();
-		if (duplicatesOption == DuplicatesOption.NOT_ALLOWED) {
-			return "DN";
-		} else if (duplicatesOption == DuplicatesOption.FIRST) {
-			return "DF";
-		} else if (duplicatesOption == DuplicatesOption.LAST) {
-			return "DL";
-		} else if (duplicatesOption == DuplicatesOption.UNORDERED) {
-			return "DU";
-		} else {
-			return "DD";
+		} else {	
+			return switch (calcKey.getDuplicatesOption()) {
+				case NOT_ALLOWED -> "DN";
+				case FIRST -> "DF";
+				case LAST -> "DL";
+				case UNORDERED -> "DU";
+				case BY_DBKEY -> "DD";
+			};
 		}
 	}
 
-	public static String getMembershipOption(MemberRole memberRole) {
-		SetMembershipOption membershipOption = memberRole.getMembershipOption();
-		if (membershipOption == SetMembershipOption.MANDATORY_AUTOMATIC) {
-			return "MA";
-		} else if (membershipOption == SetMembershipOption.MANDATORY_MANUAL) {
-			return "MM";
-		} else if (membershipOption == SetMembershipOption.OPTIONAL_AUTOMATIC) {
-			return "OA";
-		} else {
-			return "OM";
-		}
+	public static String getMembershipOption(MemberRole memberRole) {	
+		return switch (memberRole.getMembershipOption()) {
+			case MANDATORY_AUTOMATIC -> "MA";
+			case MANDATORY_MANUAL -> "MM";
+			case OPTIONAL_AUTOMATIC -> "OA";
+			case OPTIONAL_MANUAL -> "OM";
+		};
 	}
 	
-	public static short getFirstAvailablePointerPosition(SchemaRecord record) {
-		
-		short highestPointerPosition = 0;
-		
-		for (OwnerRole ownerRole : record.getOwnerRoles()) {
-			if (ownerRole.getNextDbkeyPosition() > highestPointerPosition) {
-				highestPointerPosition = ownerRole.getNextDbkeyPosition();
-			}
-			if (ownerRole.getPriorDbkeyPosition() != null &&
-				ownerRole.getPriorDbkeyPosition()
-						 .shortValue() > highestPointerPosition) {
-				
-				highestPointerPosition = 
-					ownerRole.getPriorDbkeyPosition().shortValue();
-			}			
-		}
-		
-		for (MemberRole memberRole : record.getMemberRoles()) {
-			if (memberRole.getNextDbkeyPosition() != null &&
-				memberRole.getNextDbkeyPosition()
-						  .shortValue() > highestPointerPosition) {
-				
-				highestPointerPosition = 
-					memberRole.getNextDbkeyPosition().shortValue();
-			}
-			if (memberRole.getPriorDbkeyPosition() != null &&
-				memberRole.getPriorDbkeyPosition()
-						  .shortValue() > highestPointerPosition) {
-				
-				highestPointerPosition = 
-					memberRole.getPriorDbkeyPosition().shortValue();
-			}
-			if (memberRole.getOwnerDbkeyPosition() != null &&
-				memberRole.getOwnerDbkeyPosition()
-						  .shortValue() > highestPointerPosition) {
-				
-				highestPointerPosition = 
-					memberRole.getOwnerDbkeyPosition().shortValue();
-			}
-			if (memberRole.getIndexDbkeyPosition() != null &&
-				memberRole.getIndexDbkeyPosition()
-						  .shortValue() > highestPointerPosition) {
-				
-				highestPointerPosition = 
-					memberRole.getIndexDbkeyPosition().shortValue();
-			}
-		}
-		
-		return (short) (highestPointerPosition + 1);
-		
+	public static short getFirstAvailablePointerPosition(SchemaRecord schemaRecord) {
+		return (short) (getAllPointersInCurrentPrefix(schemaRecord)
+				.max(comparing(Function.identity()))
+				.orElse((short) 0) + 1);
 	}
 	
-	public static String getPointers(MemberRole memberRole) {
-		
-		if (memberRole.getSet().isVsam()) {
-			return "";
+	private static Stream<Short> getAllPointersInCurrentPrefix(SchemaRecord schemaRecord)  {
+		return Stream.concat(getOwnerRolePointers(schemaRecord.getOwnerRoles()), getMemberRolePointers(schemaRecord.getMemberRoles()))
+				.sorted();
+	}
+	
+	private static Stream<Short> getOwnerRolePointers(List<OwnerRole> ownerRoles) {
+		return ownerRoles.stream().flatMap(Tools::getOwnerRolePointers)
+				.sorted();
+	}
+	
+	private static Stream<Short> getOwnerRolePointers(OwnerRole ownerRole) {
+		return Arrays.asList(ownerRole.getNextDbkeyPosition(), ownerRole.getPriorDbkeyPosition()).stream()
+				.filter(Objects::nonNull);
+	}
+	
+	private static Stream<Short> getMemberRolePointers(List<MemberRole> memberRoles) {
+		return memberRoles.stream().flatMap(Tools::getMemberRolePointers)
+				.sorted();
+	}
+	
+	private static Stream<Short> getMemberRolePointers(MemberRole memberRole) {
+		return Arrays.asList(memberRole.getNextDbkeyPosition(), memberRole.getPriorDbkeyPosition(),
+				memberRole.getOwnerDbkeyPosition(), memberRole.getIndexDbkeyPosition()).stream()
+				.filter(Objects::nonNull);
+	}
+	
+	public static String getPointers(MemberRole memberRole) {			
+		return switch(memberRole.getSet().getMode()) {
+			case CHAINED -> getPointersForChainedSet(memberRole);
+			case INDEXED -> getPointersForIndexedSet(memberRole);
+			case VSAM_INDEX -> "";
+		};
+	}
+	
+	private static String getPointersForChainedSet(MemberRole memberRole) {
+		var pointers = new StringBuilder();
+		pointers.append("N");
+		if (memberRole.getPriorDbkeyPosition() != null) {
+			pointers.append("P");
 		}
-		
-		StringBuilder p = new StringBuilder();
-		
-		if (memberRole.getSet().getMode() == SetMode.CHAINED) {
-			p.append("N");
-			if (memberRole.getPriorDbkeyPosition() != null) {
-				p.append("P");
+		if (memberRole.getOwnerDbkeyPosition() != null) {
+			pointers.append("O");
+		}
+		return pointers.toString();
+	}
+	
+	private static String getPointersForIndexedSet(MemberRole memberRole) {
+		var pointers = new StringBuilder();
+		if (memberRole.getIndexDbkeyPosition() != null || memberRole.getOwnerDbkeyPosition() != null) {
+			if (memberRole.getIndexDbkeyPosition() != null) {
+				pointers.append("I");
 			}
 			if (memberRole.getOwnerDbkeyPosition() != null) {
-				p.append("O");
+				pointers.append("O");
 			}
 		} else {
-			if (memberRole.getIndexDbkeyPosition() != null ||
-				memberRole.getOwnerDbkeyPosition() != null) {
-				
-				if (memberRole.getIndexDbkeyPosition() != null) {
-					p.append("I");
-				}
-				if (memberRole.getOwnerDbkeyPosition() != null) {
-					p.append("O");
-				}
-			} else {
-				p.append("-");
-			}
+			pointers.append("-");
 		}
-		
-		return p.toString();
+		return pointers.toString();
 	}
 
 	public static String getRootMessage(Throwable t) {
-		Stack<String> messages = new Stack<>();
-		String message = t.getMessage();
+		var messages = new ArrayDeque<String>();
+		var message = t.getMessage();
 		messages.push(message != null && !message.trim().isEmpty() ? message : "An error occurred");
-		for (Throwable next = t.getCause(); next != null; next = next.getCause()) {
+		for (var next = t.getCause(); next != null; next = next.getCause()) {
 		    message = next.getMessage();
-		    if (message != null && !message.trim().isEmpty()) {
-		    	messages.push(message);
+		    if (message != null && !message.isBlank()) {
+		    		messages.push(message);
 		    }
 		}
-		message = messages.pop();
-		return message;
+		return messages.pop();
 	}
 	
 	public static String getSortKeys(MemberRole memberRole) {
-		
 		if (memberRole.getSet().getOrder() != SetOrder.SORTED || memberRole.getSortKey() == null) { 				
 			return null;
-		}
-		
-		StringBuilder p = new StringBuilder();
-		boolean ascending = 
-			memberRole.getSortKey().getElements().get(0).getSortSequence() == SortSequence.ASCENDING;
-		for (KeyElement keyElement : memberRole.getSortKey().getElements()) {
-			SortSequence sortSequence = keyElement.getSortSequence();
-			if (p.length() == 0) {
-				// very first line
-				if (ascending) {
-					p.append("ASC (");
-				} else {
-					p.append("DESC (");
-				}				
-			} else if ((sortSequence == SortSequence.ASCENDING) != ascending) {				
-				// switch of sort sequence
-				ascending = keyElement.getSortSequence() == SortSequence.ASCENDING;
-				p.append("),\n");
-				if (ascending) {
-					p.append("ASC (");
-				} else {
-					p.append("DESC (");
-				}				
-			} else {
-				// same sort sequence
-				p.append(",\n");
-				// by using a tab character, things will currently not line up 
-				// as we would like them to...
-				p.append("\t");
-			}	
-			if (!keyElement.isDbkey()) {
-				p.append(keyElement.getElement().getName());
-			} else {
-				p.append("DBKEY");
+		} else {
+			var sortKeys = new StringBuilder();
+			var inAscendingMode = memberRole.getSortKey().getElements().isEmpty() ||
+					memberRole.getSortKey().getElements().get(0).getSortSequence() == SortSequence.ASCENDING;
+			for (var keyElement : memberRole.getSortKey().getElements()) {
+				inAscendingMode = appendKeyElementData(keyElement, inAscendingMode, sortKeys);
 			}
+			sortKeys.append(") ");		
+			sortKeys.append(getDuplicatesOption(memberRole.getSortKey()));
+			return sortKeys.toString();
 		}
-		p.append(") ");		
-		p.append(getDuplicatesOption(memberRole.getSortKey()));
-		return p.toString();
+	}
+	
+	private static boolean appendKeyElementData(KeyElement keyElement, boolean inAscendingMode, StringBuilder target) {
+		var newInAscendingMode = inAscendingMode;
+		var sortSequence = keyElement.getSortSequence();
+		if (target.isEmpty()) {
+			// very first line
+			if (newInAscendingMode) {
+				target.append("ASC (");
+			} else {
+				target.append("DESC (");
+			}				
+		} else if ((sortSequence == SortSequence.ASCENDING) != newInAscendingMode) {				
+			// switch of sort sequence
+			newInAscendingMode = sortSequence == SortSequence.ASCENDING;
+			target.append("),\n");
+			if (newInAscendingMode) {
+				target.append("ASC (");
+			} else {
+				target.append("DESC (");
+			}				
+		} else {
+			// same sort sequence
+			target.append(",\n");
+			// by using a tab character, things will currently not line up as we would like them to...
+			target.append("\t");
+		}	
+		if (!keyElement.isDbkey()) {
+			target.append(keyElement.getElement().getName());
+		} else {
+			target.append("DBKEY");
+		}
+		return newInAscendingMode;
 	}
 
 	public static String getStorageMode(StorageMode storageMode) {
-		if (storageMode == StorageMode.FIXED) {
-			return "F";
-		} else if (storageMode == StorageMode.FIXED_COMPRESSED) {
-			return "FC";
-		} else if (storageMode == StorageMode.VARIABLE) {
-			return "V";
-		} else {
-			return "VC";
-		}
+		return switch (storageMode) {
+			case FIXED -> "F";
+			case FIXED_COMPRESSED -> "FC";
+			case VARIABLE -> "V";
+			case VARIABLE_COMPRESSED -> "VC";
+		};
 	}
 
 	public static String getSystemOwnerArea(MemberRole memberRole) {
 		try {
-			return memberRole.getSet()
-							 .getSystemOwner()
-							 .getAreaSpecification()
-							 .getArea()
-							 .getName();
-		} catch (Throwable t) {
-			// if, for some reason, detecting the system owner's area fails (e.g. somewhere during
-			// an index removal process or when undoing the creation of a new index), return null
+			return memberRole.getSet().getSystemOwner().getAreaSpecification().getArea().getName();
+		} catch (Exception e) {
+			// if, for some reason, detecting the system owner's area fails (e.g. somewhere during an index
+			// removal process or when undoing the creation of a new index), return null
 			return null;
 		}
 	}
 	
 	public static boolean isInvolvedInOccurs(Element element) {
-		
-		// check if the element itself has an OCCURS specification 
-		if (element.getOccursSpecification() != null) {
-			return true;
-		}
-		
-		// check if any of the element's parent fields, if any, has an OCCURS specification
-		Element parent = element.getParent();
-		while (parent != null) {
-			if (parent.getOccursSpecification() != null) {
-				return true;
-			}
-			parent = parent.getParent();
-		}
-		
-		return false;
-		
+		return Stream.iterate(element, Objects::nonNull, Element::getParent)
+				.map(Element::getOccursSpecification)
+				.anyMatch(Objects::nonNull);
 	}
 
-	public static boolean isInvolvedInRedefines(Element element) {		
-		
-		// check if the element itself refers to a redefined field 
-		if (element.getRedefines() != null) {
-			return true;
-		}
-		
-		// check if any of the element's parent fields, if any, refers to a redefined field
-		Element parent = element.getParent();
-		while (parent != null) {
-			if (parent.getRedefines() != null) {
-				return true;
-			}
-			parent = parent.getParent();
-		}
-		
-		return false;
-		
+	public static boolean isInvolvedInRedefines(Element element) {
+		return Stream.iterate(element, Objects::nonNull, Element::getParent)
+				.map(Element::getRedefines)
+				.anyMatch(Objects::nonNull);
 	}
 	
 	public static Schema readFromFile(File file) {
 		if (file.getName().toLowerCase().endsWith(".schema")) {
-			ResourceSet resourceSet = new ResourceSetImpl();
-			resourceSet.getResourceFactoryRegistry()
-			   		   .getExtensionToFactoryMap()
-			   		   .put("schema", new XMIResourceFactoryImpl());
-			URI uri = URI.createFileURI(file.getAbsolutePath());
-			Resource resource = resourceSet.getResource(uri, true);
+			var resourceSet = new ResourceSetImpl();
+			resourceSet.getResourceFactoryRegistry().getExtensionToFactoryMap().put("schema", new XMIResourceFactoryImpl());
+			var uri = URI.createFileURI(file.getAbsolutePath());
+			var resource = resourceSet.getResource(uri, true);
 			return (Schema) resource.getContents().get(0);
 		} else if (file.getName().toLowerCase().endsWith(".schemadsl")) {
 			return ModelFromDslBuilderForJava.schema(file);
@@ -420,16 +342,14 @@ public abstract class Tools {
 	}
 
 	/**
-	 * Removes the trailing underscore from the given name (DDLCATLOD related
-	 * records and sets).  The given name does not necessarily have a trailing
-	 * underscore.
+	 * Removes the trailing underscore from the given name (DDLCATLOD related records and sets). The given name
+	 * does not necessarily have a trailing underscore.
 	 * @param name
 	 * @return
 	 */
 	public static String removeTrailingUnderscore(String name) {
-		// remove the trailing underscore from the given name (DDLCATLOD related
-		// records and sets)
-		StringBuilder p = new StringBuilder(name);
+		// remove the trailing underscore from the given name (DDLCATLOD related records and sets)
+		var p = new StringBuilder(name);
 		if (p.charAt(p.length() - 1) == '_') {
 			p.setLength(p.length() - 1);
 		}
@@ -442,22 +362,26 @@ public abstract class Tools {
 	 * @throws IOException
 	 */
 	public static byte[] writeToBuffer(InputStream inputStream) throws IOException {
-	    byte[] buffer = new byte[inputStream.available()];
-	    inputStream.read(buffer);
+		var bytesAvailable = inputStream.available();
+	    var buffer = new byte[bytesAvailable];
+	    var bytesRead = inputStream.read(buffer);
 	    inputStream.close();
+	    if (bytesRead != bytesAvailable) {
+	    		Plugin.getDefault().getLog().warn("#bytes read (" + bytesRead + ") != bytes available (" + bytesAvailable + ")");
+	    }
 	    return buffer;
 	}
 	
 	public static void writeToFile(byte[] buffer, File file) throws IOException {
-		OutputStream outputStream = new FileOutputStream(file);
-	    outputStream.write(buffer);
-		outputStream.flush();
-		outputStream.close();
+		try (var outputStream = new FileOutputStream(file)) {
+		    outputStream.write(buffer);
+			outputStream.flush();
+		}
 	}
 	
 	public static void writeToFile(String data, File file) throws IOException {
-		OutputStream outputStream = new FileOutputStream(file);
-		PrintWriter out = new PrintWriter(outputStream);
+		var outputStream = new FileOutputStream(file);
+		var out = new PrintWriter(outputStream);
 	    out.print(data);
 	    out.flush();
 		out.close();
@@ -475,15 +399,18 @@ public abstract class Tools {
 	}
 	
 	private static void writeToFileAsXMI(Schema schema, File file) throws IOException {
-		ResourceSet resourceSet = new ResourceSetImpl();
-		URI fileURI = URI.createFileURI(file.getAbsolutePath());
-		Resource resource = resourceSet.createResource(fileURI);
+		var resourceSet = new ResourceSetImpl();
+		var fileURI = URI.createFileURI(file.getAbsolutePath());
+		var resource = resourceSet.createResource(fileURI);
 		resource.getContents().add(schema);						
 		resource.save(null);
 	}
 	
 	private static void writeToFileAsDSL(Schema schema, File file) throws IOException {
 		writeToFile(new SchemaSyntaxBuilder().build(schema), file);
+	}
+	
+	private Tools() {
 	}
 	
 }
